--- a/src/Estral.Host.Web/Features/Pages/Home/Index.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Home/Index.cshtml
@@ -1,2 +1,20 @@
 @page "/"
+@using Estral.Host.Web.Infra.Extensions
 @model Estral.Host.Web.Features.Pages.Home.IndexModel
+
+<article style="display: flex; flex-direction: column; gap: 0.5em; align-items: center;">
+    <h2>
+        moi
+    </h2>
+    <a href="/content/browse" class="link">
+        Browse content
+    </a>
+    @if (User.IsAuthenticated())
+    {
+        <p>Logged in as @User.GetUsername()</p>
+    }
+    else
+    {
+        <a href="/auth/login" class="link">Log in to upload</a>
+    }
+</article>
