--- a/src/Estral.Host.Web/Features/Pages/_Layout.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/_Layout.cshtml
@@ -29,6 +29,8 @@
                         {
                             <a href="/auth/login">Log in</a>
                         }
+                        <a href="/boring/privacy">Privacy policy</a>
+                        <a hreef="/boring/terms">Terms of service</a>
                     </menu>
                 </div>
                 <a href="/">Home</a>
@@ -63,9 +65,55 @@
             
         </style>
     </header>
+
+    <noscript>
+        Please enable javascript to use this website
+    </noscript>
+
     <main>
         @RenderBody()
     </main>
     @await RenderSectionAsync("Scripts", required: false)
+
+    <div id="cookiefun">
+        <p>By using this website, you agree to the use of necessary first party cookies and necessary Cloudflare cookies</p>
+        <button class="button" id="cookiefun-accept">I accept :)</button>
+    </div>
+
+    <style>
+        #cookiefun {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 0.75em;
+            background-color: var(--platinum-darkest);
+            padding: 12px;
+            display: none;
+        }
+
+        #cookiefun-accept {
+            --bg: var(--orange);
+            --bg-hover: var(--platinum-lighter);
+        }
+    </style>
+
+    <script>
+        (() => {
+            const fun = document.getElementById("cookiefun");
+            const accepted = localStorage.getItem("cookiefun_accepted");
+            console.log(fun, accepted);
+
+            if (!accepted) {
+                fun.style.display = "flex";
+                document.getElementById("cookiefun-accept").addEventListener("click", () => {
+                    localStorage.setItem("cookiefun_accepted", "1");
+                    fun.style.display = "none";
+                });
+            }
+        })();
+    </script>
+
 </body>
 </html>
