Add opengraph & page titles

--- a/src/Estral.Host.Web/Features/Pages/Auth/AccessDenied/AccessDenied.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Auth/AccessDenied/AccessDenied.cshtml
@@ -1,5 +1,8 @@
 @page "/Auth/AccessDenied"
 @model Estral.Host.Web.Features.Pages.Auth.AccessDenied.AccessDeniedModel
+@{
+    ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = "Access denied";
+}
 
 <h2>
     403: Access denied
