--- a/src/Estral.Host.Web/Features/Pages/Auth/Login/Login.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Auth/Login/Login.cshtml
@@ -1,5 +1,8 @@
 @page "/Auth/Login"
 @model Estral.Host.Web.Features.Pages.Auth.Login.LoginModel
+@{
+    ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = "Log in";
+}
 
 <article id="page">
     <p>
