--- a/src/Estral.Host.Web/Features/Pages/Auth/Logout/Logout.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Auth/Logout/Logout.cshtml
@@ -1,2 +1,5 @@
 @page "/Auth/Logout"
 @model Estral.Host.Web.Features.Pages.Auth.Logout.LogoutModel
+@{
+    ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = "Logging out...";
+}
