--- a/src/Estral.Host.Web/Features/Pages/Boring/Privacy/Privacy.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Boring/Privacy/Privacy.cshtml
@@ -1,5 +1,8 @@
 @page "/Boring/Privacy"
 @model Estral.Host.Web.Features.Pages.Boring.Privacy.PrivacyModel
+@{
+    ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = "Privacy policy";
+}
 
 <article style="width: var(--default-page-width); margin-left: auto; margin-right: auto;
                 display: flex; flex-direction: column; gap: 0.5em;">
