--- a/src/Estral.Host.Web/Features/Pages/Boring/Terms/Terms.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Boring/Terms/Terms.cshtml
@@ -1,5 +1,8 @@
 @page "/Boring/Terms"
 @model Estral.Host.Web.Features.Pages.Boring.Terms.TermsModel
+@{
+    ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = "Terms of service";
+}
 
 <article style="display: flex; flex-direction: column; gap: 0.5em;
                 width: var(--default-page-width); margin-left: auto; margin-right: auto;">
