--- a/src/Estral.Host.Web/Features/Pages/Home/Index.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Home/Index.cshtml
@@ -1,6 +1,9 @@
 @page "/"
 @using Estral.Host.Web.Infra.Extensions
 @model Estral.Host.Web.Features.Pages.Home.IndexModel
+@{
+    ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = "Estral host";
+}
 
 <article style="display: flex; flex-direction: column; gap: 0.5em; align-items: center;">
     <h2>
