--- a/src/Estral.Host.Web/Features/Pages/Content/Browse/Browse.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Content/Browse/Browse.cshtml
@@ -1,6 +1,9 @@
 @page "/Content/Browse"
 @model Estral.Host.Web.Features.Pages.Content.Browse.BrowseModel
 @inject Estral.Host.Web.Infra.StorageHelper storageHelper
+@{
+    ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = "Browse";
+}
 
 @section Head {
     <link rel="stylesheet" href="/browse.css" />
@@ -14,7 +17,7 @@
                 <a href="/content/@content.Id">@content.Title</a>
                 <a href="/user/@content.OwnerId">@content.OwnerName</a>
                 <a href="/content/@content.Id">
-                    <img src="@storageHelper.GetContentUrl(content.Id)" />
+                    <img src="@storageHelper.GetCdnUrl(content.Id)" />
                 </a>
             </div>
         }
