Add ordering for content/browse, fix user content link

--- a/src/Estral.Host.Web/Features/Pages/User/User.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/User/User.cshtml
@@ -25,6 +25,6 @@
             <a href="/settings" class="link">Settings</a>
         }
 
-        <a href="/browse?userId=@(Model.UserData.Id)" class="link">Browse uploads</a>
+        <a href="/content/browse?userId=@(Model.UserData.Id)" class="link">Browse uploads</a>
     }
 </article>
