Add github link to index page

--- a/src/Estral.Host.Web/Features/Pages/Home/Index.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Home/Index.cshtml
@@ -9,8 +9,14 @@
     <h2>
         moi
     </h2>
+    <p>
+        Estral Host is an image host website
+    </p>
     <a href="/content/browse" class="link">
         Browse content
+    </a>
+    <a href="https://github.com/svee4/estral.host" class="link">
+        View on Github
     </a>
     @if (User.IsAuthenticated())
     {
