Refactor s3/r2 client, add pfp to user page

--- a/src/Estral.Host.Web/Features/Pages/User/User.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/User/User.cshtml
@@ -1,6 +1,9 @@
 @page "/User/{id:int}"
+@using Estral.Host.Web.Infra
 @using Estral.Host.Web.Infra.Extensions
 @model Estral.Host.Web.Features.Pages.User.UserModel
+@inject StorageHelper storageHelper
+
 @{
     ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = Model.NotFound ? "User not found" : Model.UserData.UserName;
 }
@@ -16,7 +19,10 @@
     }
     else
     {
-        <h2>@Model.UserData.UserName</h2>
+        <div style="display: flex; gap: 1em;">
+            <img src="@storageHelper.GetCdnPfpUrl(Model.UserData.Id)" style="width: 52px; height: 52px" />
+            <h2>@Model.UserData.UserName</h2>
+        </div>
         <p>
             @Model.UserData.ProfileDescription
         </p>
